--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "StyleConnect",
-    "slug": "StyleConnect",
+    "name": "Tarot By AI",
+    "slug": "TarotByAi",
     "platforms": ["ios", "android", "web"],
     "version": "1.3.1",
     "orientation": "portrait",
@@ -18,11 +18,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png"
       },
-      "config": {
-        "googleMaps": {
-          "apiKey": "AIzaSyDLMmE3p_s7JQebQz4a12YEIYIMILqI06U"
-        }
-      },
+      "config": {},
       "softwareKeyboardLayoutMode": "pan",
       "package": "com.style.connect.saloon",
       "versionCode": 23,
@@ -37,10 +33,10 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.style.connect.saloon"
     },
-    "description": "Connect clients with saloons",
+    "description": "Get personalized readings",
     "extra": {
       "bugsnag": {
-        "apiKey": "531d96660ab9d0305b9115d533ffffdb"
+        "apiKey": "4b92d358594f0bcb4e0e077080412c3c"
       },
       "eas": {
         "projectId": "b6d5852c-27c7-4c72-b05b-734196547cfb"
