--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Cristina Zurba",
-    "slug": "CristinaZurba",
+    "slug": "TarotByAi",
     "platforms": ["ios", "android", "web"],
     "version": "1.3.1",
     "orientation": "portrait",
