--- a/app.json
+++ b/app.json
@@ -2,18 +2,22 @@
   "expo": {
     "name": "Cristina Zurba",
     "slug": "TarotByAi",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.4",
     "orientation": "portrait",
     "plugins": [
       [
-        "expo-image-picker",
+        "expo-build-properties",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "ios": {
+            "useFrameworks": "static"
+          }
         }
-      ],
-      "react-native-health",
-      "expo-build-properties"
+      ]
     ],
     "android": {
       "adaptiveIcon": {
@@ -23,7 +27,9 @@
       "softwareKeyboardLayoutMode": "pan",
       "package": "com.cristina.zurba.tarot",
       "versionCode": 27,
-      "permissions": ["android.permission.RECORD_AUDIO"]
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "config": {
@@ -37,23 +43,18 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.cristina.zurba.tarot"
     },
     "description": "Get personalized readings",
     "extra": {
-      "bugsnag": {
-        "apiKey": "4b92d358594f0bcb4e0e077080412c3c"
-      },
       "eas": {
-        "projectId": "87e423c7-eea6-4713-aac2-c4510baebd19"
+        "projectId": "569184e7-2d5d-4e56-b49e-642bc8dc02c3"
       }
-    },
-    "owner": "shikatedo1"
-  },
-  "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-9577714849380446~4870228858"
+    }
   }
 }
