--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo-dev-client": "~2.4.12",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
@@ -31,12 +26,14 @@
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.70.6",
     "axios": "^1.6.2",
+    "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-asset": "~8.10.1",
     "expo-av": "~13.4.1",
     "expo-build-properties": "~0.8.3",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-device": "~5.4.0",
     "expo-file-system": "~15.4.5",
     "expo-firebase-core": "^6.0.0",
@@ -51,18 +48,22 @@
     "expo-permissions": "~14.2.1",
     "expo-sms": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "geolib": "^3.3.3",
     "i18n-js": "^4.2.0",
     "lottie-react-native": "5.1.6",
+    "make-plural": "^7.3.0",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.43",
     "querystring": "^0.2.1",
+    "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-hook-form": "^7.34.2",
+    "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-calendars": "^1.1294.0",
     "react-native-circular-progress-indicator": "^4.2.0",
@@ -76,7 +77,6 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.0.1",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-health": "^1.17.0",
     "react-native-image-helper": "^0.0.3",
     "react-native-image-picker": "^4.8.4",
     "react-native-international-phone-number": "^0.4.6",
