--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "geolib": "^3.3.3",
+    "i": "^0.3.7",
     "i18n-js": "^4.2.0",
     "lottie-react-native": "5.1.6",
     "make-plural": "^7.3.0",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.43",
+    "npm": "^10.3.0",
     "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
@@ -76,6 +78,7 @@
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.0.1",
+    "react-native-google-mobile-ads": "^12.10.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-helper": "^0.0.3",
     "react-native-image-picker": "^4.8.4",
@@ -85,6 +88,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
+    "react-native-permissions": "^4.0.4",
     "react-native-phone-call": "^1.2.0",
     "react-native-popup-menu": "^0.15.12",
     "react-native-progress": "^5.0.0",
