--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "expo start --dev-client",
-    "test": "jest",
-    "lint": "eslint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@bugsnag/expo": "^48.0.0",
@@ -38,13 +37,16 @@
     "expo-constants": "~14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-dev-client": "~2.2.1",
+
+    "expo-dev-launcher": "^2.4.13",
+    "expo-dev-menu": "^3.2.1",
+    "expo-dev-menu-interface": "^1.3.0",
     "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
     "expo-firebase-analytics": "^8.0.0",
     "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "~2.3.1",
     "expo-font": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
@@ -83,8 +85,6 @@
     "react-native-google-mobile-ads": "^12.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-health": "^1.17.0",
-    "react-native-image-helper": "^0.0.3",
-    "react-native-image-picker": "^4.8.4",
     "react-native-international-phone-number": "^0.4.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
