--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
