--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Cristina Zurba",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.1.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,15 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bugsnag/expo": "^48.0.0",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "9.3.7",
-    "@react-native-firebase/app": "^18.2.0",
-    "@react-native-firebase/crashlytics": "^18.2.0",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.1.9",
@@ -26,45 +23,50 @@
     "@redux-devtools/core": "^3.13.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.70.6",
     "axios": "^1.6.2",
-    "expo": "~48.0.0",
-    "expo-application": "~5.1.1",
-    "expo-asset": "~8.9.1",
-    "expo-av": "~13.2.1",
-    "expo-build-properties": "~0.6.0",
-    "expo-constants": "~14.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-device": "~5.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-firebase-analytics": "^8.0.0",
-    "expo-firebase-core": "^6.0.0",
-    "expo-firebase-recaptcha": "~2.3.1",
-    "expo-font": "~11.1.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-linking": "~4.0.1",
-    "expo-localization": "~14.1.1",
-    "expo-location": "~15.1.1",
-    "expo-notifications": "~0.18.1",
-    "expo-permissions": "~14.1.1",
-    "expo-sms": "~11.2.1",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.2",
+    "expo": "~49.0.15",
+    "expo-application": "~5.3.0",
+    "expo-asset": "~8.10.1",
+    "expo-av": "~13.4.1",
+    "expo-build-properties": "~0.8.3",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.12",
+    "expo-device": "~5.4.0",
+    "expo-file-system": "~15.4.5",
+
+    
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
+    "expo-localization": "~14.3.0",
+    "expo-location": "~16.1.0",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
+    "expo-sms": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-tracking-transparency": "~3.1.0",
     "firebase": "^10.1.0",
     "formik": "^2.2.9",
     "fuse.js": "^6.6.2",
     "geolib": "^3.3.3",
-    "i18n-js": "^4.2.3",
-    "lottie-react-native": "5.1.4",
+    "i": "^0.3.7",
+    "i18n-js": "^4.2.0",
+    "lottie-react-native": "5.1.6",
+    "make-plural": "^7.3.0",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.43",
+    "npm": "^10.3.0",
     "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-hook-form": "^7.34.2",
-    "react-native": "0.71.14",
+    "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-calendars": "^1.1294.0",
     "react-native-circular-progress-indicator": "^4.2.0",
@@ -75,35 +77,37 @@
     "react-native-element-dropdown": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-geocoding": "^0.5.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.0.1",
-    "react-native-google-mobile-ads": "^12.8.0",
+    "react-native-google-mobile-ads": "^12.10.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-health": "^1.17.0",
+    "react-native-image-helper": "^0.0.3",
+    "react-native-image-picker": "^4.8.4",
     "react-native-international-phone-number": "^0.4.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
+    "react-native-permissions": "^4.0.4",
     "react-native-phone-call": "^1.2.0",
     "react-native-popup-menu": "^0.15.12",
     "react-native-progress": "^5.0.0",
     "react-native-purchases": "^6.3.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-side-menu": "^1.1.3",
     "react-native-simple-drawer": "^0.4.5",
     "react-native-sms": "^1.11.0",
     "react-native-star-rating-widget": "^1.7.1",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.26.0",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
@@ -111,25 +115,11 @@
     "redux-thunk": "^2.4.2",
     "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "yup": "^1.0.2",
-    "expo-dev-client": "~2.2.1"
+    "typescript": "^5.1.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/runtime": "^7.18.3",
-    "@bugsnag/plugin-expo-eas-sourcemaps": "^48.0.0",
-    "@bugsnag/source-maps": "^2.3.1",
-    "@react-native-community/eslint-config": "^3.0.2",
-    "babel-jest": "^28.1.1",
-    "eslint": "^8.18.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "^0.71.1",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "18.2.0",
-    "twilio": "^4.14.1"
+    "@babel/core": "^7.20.0"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
